<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>tw.com.lipin</groupId>
    <artifactId>Cocos_FileDeleteMD5Name</artifactId>
    <version>1.0-SNAPSHOT</version>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>11</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>11</version>
        </dependency>
        <dependency>
            <groupId>org.controlsfx</groupId>
            <artifactId>controlsfx</artifactId>
            <version>11.0.0-RC2</version>
        </dependency>
        <dependency>
            <groupId>com.jfoenix</groupId>
            <artifactId>jfoenix</artifactId>
            <version>9.0.10</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <release>11</release>
                </configuration>
            </plugin>
<!--            如果要用jfoenix,將改成這個-->
<!--            <mainClass> 是你專案的位置/專案中的主要執行的java黨-->
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.5</version>
                <configuration>
                    <mainClass>tw.com.lipin/tw.com.lipin.App</mainClass>
                    <launcher>Cocos_FileDeleteMD5Name</launcher>
                    <jlinkImageName>output</jlinkImageName>
                    <jlinkZipName>Cocos_FileDeleteMD5zip</jlinkZipName>
                    <options>
                        <option>--add-opens</option>
                        <option>java.base/java.lang.reflect=com.jfoenix</option>
                        <option>--add-opens</option>
                        <option>javafx.graphics/com.sun.javafx.scene=com.jfoenix</option>
                    </options>
                    <commandlineArgs>-Xmx1024m</commandlineArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>